--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
         },
         "files": ["app/helper.php"]
     },
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^10.5"
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    }
 }
